# velox

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-01-readme-license-design.md  2026-03-01-readme-license.md  2026-03-01-velox-design.md  2026-03-01-velox-docker-cicd-design.md  2026-03-01-velox-docker-cicd.md  2026-03-01-velox-implementation.md
src/velox/: __init__.py  cli.py  evaluator.py  generator.py  interpolation.py  log_parser.py  models.py  orchestrator.py  parser.py  reporter.py  runner.py  vcs.py
src/velox/templates/: sample_api_key_test.yaml  sample_test.yaml  simulation.scala.j2
src/velox/templates/ci/: bitbucket.yml  circle.yml  github.yml
tests/: conftest.py  test_cli.py  test_cli_ci.py  test_evaluator.py  test_generator.py  test_integration.py  test_interpolation.py  test_log_parser.py  test_models.py  test_parser.py  test_reporter.py  test_runner.py  test_vcs.py
tests/fixtures/: invalid_no_flow.yaml  minimal_test.yaml  valid_test.yaml
