[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velox"
version = "0.1.0"
description = "YAML-driven Gatling performance testing CLI"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "jsonpath-ng>=1.5.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
velox = "velox.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/velox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
